# ytdl_implementation

./: .gitignore  README.md  downloader.py  extending_plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_cli.py  test_config.py  test_extra.py  test_flags.py  test_integration.py
